[gd_scene load_steps=4 format=2]

[ext_resource path="res://InventoryLogic/Slot.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Inventory UI/slot locked.png" type="Texture" id=2]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/StoveSlots.gd" type="Script" id=3]

[node name="StoveSlots" type="Control"]
margin_left = -299.0
margin_top = -200.0
margin_right = 299.0
margin_bottom = 32.0
script = ExtResource( 3 )

[node name="FuelSlot" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -38.0
margin_right = -168.0
margin_bottom = 16.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="Ingredient1" type="Panel" parent="."]
margin_left = 160.0
margin_top = 16.0
margin_right = 214.0
margin_bottom = 70.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="Ingredient2" type="Panel" parent="."]
margin_left = 160.0
margin_top = 78.0
margin_right = 214.0
margin_bottom = 132.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="LockSlot" type="TextureRect" parent="Ingredient2"]
visible = false
margin_right = 54.0
margin_bottom = 54.0
texture = ExtResource( 2 )

[node name="Ingredient3" type="Panel" parent="."]
margin_left = 160.0
margin_top = 140.0
margin_right = 214.0
margin_bottom = 194.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="LockSlot" type="TextureRect" parent="Ingredient3"]
visible = false
margin_right = 54.0
margin_bottom = 54.0
texture = ExtResource( 2 )

[node name="YieldSlot1" type="Panel" parent="."]
margin_left = 375.0
margin_top = 16.0
margin_right = 429.0
margin_bottom = 70.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="YieldSlot2" type="Panel" parent="."]
margin_left = 375.0
margin_top = 78.0
margin_right = 429.0
margin_bottom = 132.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )

[node name="CoalYieldSlot" type="Panel" parent="."]
margin_left = 375.0
margin_top = 140.0
margin_right = 429.0
margin_bottom = 194.0
rect_min_size = Vector2( 54, 54 )
script = ExtResource( 1 )
